Updated with common ignore patterns.
Updated with common ignore patterns.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,22 @@
+.ipynb_checkpoints
 *.DS_Store
 *.DS_Store?
+
+*.html
+
+*.tsv
+*.csv
+*.dta
+*.log
+*.xls
+*.xlsx
+*.zip
+*.pt
+*.pkl
+*.parquet
+*.json
+
+*.doc
+*.docx
+
+*.pyc
